syntax = "proto2";

package frankenpaxos.twopc;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.twopc"
  flat_package: true
};

// Required fields can be used here given the constraints of how we run benchmarks
message ClientRequest {
  required int64 id = 1;
  required bytes client_address = 2;
  required bytes command = 3;
}

message ClientReply {
  required int64 id = 1;
  required bool committed = 2;
  required bytes command = 3;
}

message P1Request {
  required int64 id = 1;
  required bytes client_address = 2;
  required bytes command = 3;
}

message P1Reply {
  required int64 id = 1;
  required bytes client_address = 2;
  required bool prepared = 3;
  required bytes command = 4;
}

message P2Request {
  required int64 id = 1;
  required bytes client_address = 2;
  required bytes command = 3;
}

message P2Reply {
  required int64 id = 1;
  required bytes client_address = 2;
  required bool committed = 3;
  required bytes command = 4;
}

message LeaderInbound {
  oneof request {
    ClientRequest client_request = 1;
    P1Reply p1_reply = 2;
    P2Reply p2_reply = 3;
  }
}

message ReplicaInbound {
  oneof request {
    P1Request p1_request = 1;
    P2Request p2_request = 2;
  }
}